--- a/Splendid.POCO.UI/packages.config
+++ b/Splendid.POCO.UI/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="AvalonEdit" version="5.0.4" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
   <package id="Prism.Autofac" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
